# mexc_telegram_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/domain/: indicators.py  models.py  state.py
app/engine/: filter.py  signal_engine.py
app/exchange/: mexc_pairs.py  mexc_stream.py
app/infrastructure/telegram/: sender.py
app/runtime/: pipeline.py  state.py
