[project]
name = "mexc-telegram-bot"
version = "0.1.0"
description = "Instant MEXC Futures alerts 24/7. Monitoring all USDT pairs for the best trade setups."
authors = [
    {name = "myratgeldiyevmuhammet02@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "websockets (>=16.0,<17.0)",
    "python-telegram-bot (>=22.7,<23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
